move speaker image from FeaturedProductOne up a bit for screen sizes 1024-1200px or so in order to avoid the speaker bottom sticking out of the container bottom.  Add padding-left to tablet and large screen sizes for FeaturedProductThree text-container.  Remove background-position and background-size properties from header.sass since they are already in the mixin that is rendering the background image.  Fix tablet-header .icon-group width and alignment.  Use min() function on .featured-product-hero-info section to allow the margin-top to shrink as the screen size reduces for mobile size.  Fine tune stylings in the hero-section to match design better.  Bump up image size inside ProductCategoryMenu component and set heights to auto for better rendering.

--- a/src/components/FeaturedProductOne/featured-product-one.sass
+++ b/src/components/FeaturedProductOne/featured-product-one.sass
@@ -38,12 +38,15 @@ svg.circle-pattern-svg
         width: 26.12%
     
     +all-large-screen
-        bottom: -2.5%
+        bottom: -2.7%
         clip-path: rect(0 100% 96.5555% 0)
         left: 12.61%
         max-width: 375px
         position: absolute
         width: 33.78%
+    
+    +small-laptop
+        bottom: -2.2%
 
 .featured-product-one-image
     height: 100%
