--- a/src/components/FeaturedProductThree/featured-product-three.sass
+++ b/src/components/FeaturedProductThree/featured-product-three.sass
@@ -40,9 +40,14 @@
         align-items: center
         display: flex 
         justify-content: center
-        padding: 105.5px 0
+        padding: 106px 0
         width: 100%
-       
+    
+    +all-tablets
+        padding-left: 42px
+
+    +all-large-screen
+       padding-left: 96px
 
 .featured-product-three-info.col
     gap: 23px
