--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -5,8 +5,6 @@ header
 
 header .header-background
     @include set-background-image-from-file('./images/image-header-mobile.jpg')
-    background-position: top center
-    background-size: cover
     height: 600px
 
     +all-screen-bigger-than-mobile
@@ -22,8 +20,7 @@ header .header-background
 .mobile-header.row.main-container, .tablet-header.row.main-container, .desktop-header.row.main-container 
     align-items: center
     justify-content: space-between
-    padding-bottom: 35px
-    padding-top: 35px
+    padding: 35px 0
      
 
 .mobile-header.row.main-container
@@ -53,8 +50,9 @@ header .header-background
 
 .tablet-header
     & .icon-group
+        align-items: center
         justify-content: space-between
-        width: 25%
+        width: 201px
 
 
 .navigation-bar
