--- a/src/components/HeroSection/hero-section.sass
+++ b/src/components/HeroSection/hero-section.sass
@@ -1,6 +1,5 @@
 @import ../../sass/global
 
-
 .hero-section
     align-items: center
     justify-content: space-between
@@ -10,60 +9,66 @@
 
 .featured-product-hero-info 
     align-items: center
-    gap: 2em
     justify-content: center
-    margin-top: 6em
+    margin-top: min(112px, 34.25%)
     text-align: center
     
     +all-screen-bigger-than-mobile
-        margin-top: 10em
+        margin-top: 130px
 
     +all-large-screen
         align-items: flex-start
-        margin-top: 100px
         text-align: left
 
 .new-product-intro
     color: $new-product-grey
+    letter-spacing: 10px
 
 .featured-product-hero-header
     color: $white
+    letter-spacing: 1.29px
+    line-height: 40px
+    padding: 28px 0 25px
 
     +all-phone
         font-size: 2.25rem
     
     +small-phone
         font-size: 2rem
-        padding: 0
-
-    +large-phone
-        padding: 0 1em
-    
-    +very-large-phone
-        padding: 0 2em
-
-    +enormous-phone
-        padding: 0 4em
-
+        
     +all-screen-bigger-than-mobile
-        padding: 0 2em
+        letter-spacing: 2px
+        line-height: 58px
+    
+    +all-tablets
+        padding: 35px 2em
     
     +all-large-screen
-        padding-left: 0
-        padding-right: 58%
+        padding: 36px 58% 36px 0
 
 
 .featured-product-teaser-hero
-
-    width: 287px
+    line-height: 25px
+    padding: 0 9.78% 28px
 
     +small-phone
-        width: 260px
+        padding: 0 0 28px
 
-    +tiny-phone
-        width: 230px
-
+    +large-phone
+        padding: 0 12% 28px
+    
     +all-tablets
-        width: 350px
+        padding: 0 25% 45px
+    
+    +large-tablet
+        padding: 0 30% 45px
+    
+    +all-large-screen
+        padding: 0 67% 46px 0
+    
+
+   
+
+
 
 
