--- a/src/components/ProductCategoryMenu/product-category-menu.sass
+++ b/src/components/ProductCategoryMenu/product-category-menu.sass
@@ -20,29 +20,12 @@
 
 
 .headphones-thumbnail, .speaker-thumbnail, .earphones-thumbnail
+    height: auto
     position: absolute
-    top: -50px
-
-.headphones-thumbnail
-    height: 104px
-    width: 79.92px
+    top: -45px
+    width: 120px      
 
     +all-large-screen
-        height: 160px
-        width: 122.95px
+        top: -50px
+        width: 150px
 
-.speaker-thumbnail
-    height: 101px
-    width: 84.04px
-
-    +all-large-screen
-        height: 146px
-        width: 121.49px
-    
-.earphones-thumbnail
-    height: 104px
-    width: 103px
-
-    +all-large-screen
-        height: 126px
-        width: 125px
